@@ -1469,7 +1469,7 @@ static unsigned int WriteMIFFImage(const ImageInfo *image_info,Image *image)
             FormatString(buffer,"scene=%lu\n",image->scene);
             (void) WriteBlobString(image,buffer);
           }
-        if (image->iterations != 1)
+        if (image->iterations != 0)
           {
             FormatString(buffer,"iterations=%lu\n",image->iterations);
             (void) WriteBlobString(image,buffer);
@@ -1819,7 +1819,9 @@ static unsigned int WriteMIFFImage(const ImageInfo *image_info,Image *image)
     if (image->next == (Image *) NULL)
       break;
     image=GetNextImage(image);
-    if (!MagickMonitor(SaveImagesText,scene++,GetImageListSize(image),&image->exception))
+    status=MagickMonitor(SaveImagesText,scene++,GetImageListSize(image),
+      &image->exception))
+    if (status == False)
       break;
   } while (image_info->adjoin);
   if (image_info->adjoin)
